fix(Swipe): issue #9931 `overflow` lose efficacy in  ios/safari

--- a/src/swipe/index.less
+++ b/src/swipe/index.less
@@ -3,6 +3,7 @@
 .van-swipe {
   position: relative;
   overflow: hidden;
+  transform: translateZ(0);
   cursor: grab;
   user-select: none;
 
